# BaldMonster

./: .gitignore  AttackItem.cpp  AttackItem.h  BattleSystem.cpp  BattleSystem.h  Bible.h  BossMonster.cpp  BossMonster.h  Brush.h  CMakeLists.txt  Character.cpp  Character.h  Charater.cpp  Charater.h  GameManager.cpp  GameManager.h  HealingItem.cpp  HealingItem.h  Healingitem.cpp  Item.cpp  Item.h  Monster.cpp  Monster.h  MonsterBase.cpp  MonsterBase.h  MonsterLoader.cpp  MosterBase.h  README.md  Test.sln  UObjectBase.cpp  UObjectBase.h  YellowMonster.cpp  YellowMonster.h  boss.monster.json  item.cpp  main.cpp  white.monster.json
Shop/: Shop.cpp  Shop.h
Test/: Test.vcxproj  Test.vcxproj.filters
Test/x64/Debug/: Test.exe.recipe  Test.ilk  vc143.idb
Test/x64/Debug/Test.tlog/: CL.command.1.tlog  Cl.items.tlog  Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/data/: blue.hard.monster.json  blue.monster.json  boss.monster.json  green.monster.json  green.normal.monster.json  pink.monster.json  pink.normal.monster.json  white.easy.monster.json  yellow.easy.monster.json  yellow.monster.json
include/: GameManager.h  Item.h  Monster.h  MonsterBase.h  MonsterDefinition.h  UObjectBase.h
include/Character/: Character.h
include/GameManager/: BattleSystem.h  GameManager.h
include/Item/: AttackItem.h  Bible.h  Brush.h  DropEntry.h  HealingItem.h  Item.h  ItemFactory.h
include/Monster/: BossMonster.h  MonsterBase.h  MonsterLoader.h
include/Save/: SaveManager.h
include/Shop/: Shop.h
include/Util/: Util.h
save/: k.json
src/: BossMonster.cpp  GameManager.cpp  Monster.cpp  MonsterBase.cpp  UObjectBase.cpp  main.cpp
src/Character/: Character.cpp
src/GameManager/: BattleSystem.cpp  GameManager.cpp
src/Item/: AttackItem.cpp  HealingItem.cpp  Item.cpp
src/Monster/: BossMonster.cpp  MonsterBase.cpp  MonsterLoader.cpp
src/Save/: SaveManager.cpp
src/Shop/: Shop.cpp
src/Util/: Util.cpp
